# stock_analysis

./: README.md  pyproject.toml
backend/: agents.py  api.py  crews.py  tasks.py
backend/tools/: calculator_tool.py
db/: chroma.sqlite3
frontend/components/: Header.tsx
frontend/hooks/: useCrewOutput.tsx
frontend/pages/: index.tsx
src/stock_analysis/: crew.py  main.py
